# Robust-deep-IBVS-legged-Robots

./: LICENSE  README.md
go2_pkg/: CMakeLists.txt  package.xml  setup.py
go2_pkg/data/desired_images/R1/tracking/TR_1/: timestamps.txt
go2_pkg/data/desired_images/R1/tracking/TR_1/offline_6feat_errors/: features_pairwise_with_derivative.csv  features_pairwise_with_derivative_smoothed.csv
go2_pkg/go2_pkg/: R1_Ls_class.py  R1_go2_4P_T0_c4_node.py  R1_go2_AEoFTR_T0_c4_node.py  R1_go2_AEoFTR_c4_node.py  R1_go2_DFE_node.py  R1_go2_EoFTR_T0_c4_node.py  R1_go2_IBVS_Test_2FQSMC_T1_node.py  R1_go2_IB_T0_c4_node.py  R1_go2_SPSG_T0_c4_node.py  R1_go2_controllers_node.py  R1_go2_deep_feature_T0_node.py  R1_go2_deep_feature_node.py  R1_go2_desired_image_T3_node.py  R1_go2_desired_image_node.py  R1_go2_joy_movement_command_node.py  R1_go2_node.py  R1_go2_visualization_T0_2_node.py  R1_go2_visualization_T0_3_node.py  R1_go2_visualization_T0_F_2_node.py  R1_go2_visualization_T0_F_3_node.py  R1_go2_visualization_T0_F_node.py  R1_go2_visualization_T0_node.py  R1_go2_visualization_node.py  R1_record_cam_T0_node.py  R1_video_cam_T0_node.py  camera_generator_2_node.py  camera_generator_node.py
go2_pkg/launch/: R1_go2_4p_test_feature_launch.py  R1_go2_ALoFTR_test_feature_launch.py  R1_go2_ALoFTR_test_launch.py  R1_go2_DIBVS_T1_launch.py  R1_go2_IM_test_feature_launch.py  R1_go2_LoFTR_test_launch.py  R1_go2_SPSG_test_launch.py
go2_pkg/msg/: InterestPoints.msg
go2_pkg/scripts/: R1_go2_derired_generateion.py  R1_go2_derired_plot.py
