<?xml version="1.0"?>
<package format="3">
  <name>go2_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 package with SuperGlue and custom InterestPoints.msg</description>

  <maintainer email="ehsan@todo.todo">ehsan</maintainer>
  <license>Apache License 2.0</license>

  <!-- build-tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- for message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf_transformations</depend>
  <depend>go2_msgs</depend>  <!-- ← your custom‐msg package -->

  <export>
    <!-- use ament_python to install via setup.py -->
    <build_type>ament_python</build_type>
  </export>
</package>
